--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: Blog Bibliotheks- und Archivinformatik
-author: CK
-email:
+author: Caroline Krause
 description: > # this means to ignore newlines
   Lerntagebuch im Kurs Bibliotheks- und Archivinformatik HS2021
 
